# nlp-bagofwords-walkthrough

./: Dockerfile  README.md  main.py  pyproject.toml
core/: bagofwords.py  config.py  events.py
datas/: corpus  test.html
inference/: __init__.py
inference/io/: __init__.py
inference/io/api/: __init__.py  bagofwords.py  health.py
inference/io/schemas/: __init__.py
inference/io/ws/: __init__.py  health.py
server/: __init__.py
tools/: library_approach.py  proj_banner.py  service_logger.py  starch_approach.py
