[project]
name = "skeltfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "fastapi[all]>=0.116.1",
    "nltk[all]>=3.9.1",
]
